syntax = "proto3";

package user;

service UserService {
  rpc GetUserById(GetUserRequest) returns (GetUserResponse);
  rpc GetUsersByIds(GetUsersRequest) returns (GetUsersResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {
  repeated int32 ids = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message SearchUsersRequest {
  string city = 1;
  string phone = 2;
  bool married = 3;
}

message SearchUsersResponse {
  repeated User users = 1;
}

message User {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  float height = 5;
  bool married = 6;
}
